<resources>
    <string name="app_name">Firmak</string>
    <string name="menu_item1">Ürünlerim</string>
    <string name="menu_item2">Siparişlerim</string>
    <string name="menu_item3">Tekliflerim</string>
    <string name="menu_item4">Mesajlarım</string>
    <string name="menu_item5">Menü</string>

    <string name="urunlertitle">ÜRÜNLERİM</string>
    <string name="siparistitle">SİPARİŞLER</string>
    <string name="tekliftitle">TEKLİFLER</string>
    <string name="mesajtitle">MESAJLAR</string>
    <string name="menutitle">MENÜ</string>

    <string name="giris">Giriş Yap</string>
    <string name="kayit">Kayıt Ol</string>
    <string name="kayitlieposta">Kayıtlı E-posta Adresiniz</string>
    <string name="epostakod">E-posta Kodunuzu Giriniz</string>
    <string name="sifremiunuttum">Şifemi Unuttum</string>
    <string name="eger">Eğer bir hesabınız yoksa</string>
    <string name="eger2">Eğer bir hesabınız varsa</string>
    <string name="kayitol">Kayıt Olun</string>
    <string name="girisyapin">Giriş Yapın</string>
    <string name="hadibaslayalim">Hadi Baslayalım...</string>
    <string name="login">Giriş</string>
    <string name="forgotpass">Şifremi Unuttum</string>
    <string name="confirm">Devam</string>
    <string name="adbos">Ad boş olamaz</string>
    <string name="soyadbos">Soyad boş olamaz</string>
    <string name="emailbos">Email boş olamaz</string>
    <string name="sifrebos">Şifrenizi giriniz</string>
    <string name="newsifrebos">Yeni Şifrenizi giriniz</string>
    <string name="kodbos">Kodu giriniz</string>


    <string name="sifredegis">Şifremi Değiştir</string>
    <string name="musteritems">Müşteri Temsilcim</string>
    <string name="cikis">Çıkış Yap</string>



    <string name="yenisifre">Yeni Şifre Oluşturun</string>
    <string name="eskisifrenew">Eski Şifre ***</string>
    <string name="yenisifrenew">Yeni Şifre ***</string>
    <string name="yenisifrecon">Yeni Şifre Tekrar ***</string>
    <string name="yenisifresave">Yeni Şifre Kaydet</string>
    <string name="yenisifremsave">Yeni Şifremi Kaydet</string>

    <string name="splashheader1">Onboarding Title 1</string>
    <string name="splashheader2">Onboarding Title 2</string>
    <string name="splashheader3">Onboarding Title 3</string>
    <string name="teslimedilecek">TESLİM EDİLECEK ÜRÜNLER</string>

    <string name="onaybekleyen">ONAYIMI BEKLEYENLER</string>
    <string name="onayladiklarim">ONAYLADIKLARIM</string>
    <string name="urunekle">Ürün Ekle..</string>
    <string name="urunler">ÜRÜNLER</string>
    <string name="odemeturu">ÖDEME TÜRÜ</string>

    <string name="ozet">TEKLİF ÖZETİ</string>

    <string name="text">Toplam 4 Adet Ürün
    Öngörülen teslim tarihi: 01.04.2018</string>

    <string name="splashtext1">FİMAK Döner Arabalı Ekmek Fırınının başlıca özelliği eşit ısı dağılımı, yüksek verimle çalışması ve düzenli sirkülasyonudur. Yüksek verimi iyi tasarlanmış ısı eşanjörleriyle (ısı değiştiricisi) sağlanmaktadır. Bu sayede emsallerine göre daha az enerji ile istenilen özellikte ürün elde edilmesi sağlanır.

    Yanma hücresi ısıya dayanıklı yüksek kalite paslanmaz çelikten imal edilmektedir. Çift yönlü kasetli buhar sistemi sayesinde yüksek seviyede buhar üretilip her tavanın yeterince beslenmesi sağlanmaktadır.</string>

    <string name="splashtext2">FİMAK Döner Arabalı Ekmek Fırınının başlıca özelliği eşit ısı dağılımı, yüksek verimle çalışması ve düzenli sirkülasyonudur. Yüksek verimi iyi tasarlanmış ısı eşanjörleriyle (ısı değiştiricisi) sağlanmaktadır. Bu sayede emsallerine göre daha az enerji ile istenilen özellikte ürün elde edilmesi sağlanır.

    Yanma hücresi ısıya dayanıklı yüksek kalite paslanmaz çelikten imal edilmektedir. Çift yönlü kasetli buhar sistemi sayesinde yüksek seviyede buhar üretilip her tavanın yeterince beslenmesi sağlanmaktadır.</string>

    <string name="splashtext3">FİMAK Döner Arabalı Ekmek Fırınının başlıca özelliği eşit ısı dağılımı, yüksek verimle çalışması ve düzenli sirkülasyonudur. Yüksek verimi iyi tasarlanmış ısı eşanjörleriyle (ısı değiştiricisi) sağlanmaktadır.</string>

    <string name="detailtext">
    FİMAK Döner Arabalı Ekmek Fırınının başlıca özelliği eşit ısı dağılımı, yüksek verimle çalışması ve düzenli sirkülasyonudur.

    Yüksek verimi iyi tasarlanmış ısı eşanjörleriyle (ısı değiştiricisi) sağlanmaktadır. Bu sayede emsallerine göre daha az enerji ile istenilen özellikte ürün elde edilmesi sağlanır.

    Yanma hücresi ısıya dayanıklı yüksek kalite paslanmaz çelikten imal edilmektedir. Çift yönlü kasetli buhar sistemi sayesinde yüksek seviyede buhar üretilip her tavanın yeterince beslenmesi sağlanmaktadır.
</string>
    <!-- /Strings Menu Bottom Bar Navigation/ -->
    <string name="share_subject_for_hata">"SAUAR – 1.0.1 / Feedback"</string>
    <string name="notification_badge">9</string>
</resources>
